@@ -368,11 +368,11 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &clone_cmd,       .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "cmap",              .abbr = "cm",    .id = COM_CMAP,
 	  .descr = "map keys in cmdline mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &cmap_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "cnoremap",          .abbr = "cno",   .id = COM_CNOREMAP,
 	  .descr = "noremap keys in cmdline mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &cnoremap_cmd,    .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "colorscheme",       .abbr = "colo",  .id = COM_COLORSCHEME,
 	  .descr = "display/select color schemes",
@@ -405,7 +405,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &cunabbrev_cmd,   .min_args = 1,   .max_args = NOT_DEF, },
 	{ .name = "cunmap",            .abbr = "cu",    .id = -1,
 	  .descr = "unmap keys in cmdline mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &cunmap_cmd,      .min_args = 1,   .max_args = 1, },
 	{ .name = "delete",            .abbr = "d",     .id = -1,
 	  .descr = "delete files",
@@ -429,15 +429,15 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &dirs_cmd,        .min_args = 0,   .max_args = 0, },
 	{ .name = "dmap",              .abbr = NULL,    .id = COM_DMAP,
 	  .descr = "map keys in dialog modes",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &dmap_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "dnoremap",          .abbr = NULL,    .id = COM_DNOREMAP,
 	  .descr = "noremap keys in dialog modes",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &dnoremap_cmd,    .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "dunmap",            .abbr = NULL,    .id = -1,
 	  .descr = "unmap keys in dialog modes",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &dunmap_cmd,      .min_args = 1,   .max_args = 1, },
 	{ .name = "echo",             .abbr = "ec",     .id = COM_ECHO,
 	  .descr = "eval and print expressions",
@@ -550,7 +550,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &lstrash_cmd,     .min_args = 0,   .max_args = 0, },
 	{ .name = "map",               .abbr = NULL,    .id = COM_MAP,
 	  .descr = "map keys in normal and visual modes",
-	  .flags = HAS_EMARK,
+	  .flags = HAS_EMARK | HAS_RAW_ARGS,
 	  .handler = &map_cmd,         .min_args = 2,   .max_args = NOT_DEF, },
 	{ .name = "mark",              .abbr = "ma",    .id = -1,
 	  .descr = "set mark",
@@ -572,11 +572,11 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &mkdir_cmd,       .min_args = 1,   .max_args = NOT_DEF, },
 	{ .name = "mmap",              .abbr = "mm",    .id = COM_MMAP,
 	  .descr = "map keys in menu mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &mmap_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "mnoremap",          .abbr = "mno",   .id = COM_MNOREMAP,
 	  .descr = "noremap keys in menu mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &mnoremap_cmd,    .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "move",              .abbr = "m",     .id = COM_MOVE,
 	  .descr = "move files",
@@ -585,15 +585,15 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &move_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "munmap",            .abbr = "mu",    .id = -1,
 	  .descr = "unmap keys in menu mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &munmap_cmd,      .min_args = 1,   .max_args = 1, },
 	{ .name = "nmap",              .abbr = "nm",    .id = COM_NMAP,
 	  .descr = "map keys in normal mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &nmap_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "nnoremap",          .abbr = "nn",    .id = COM_NNOREMAP,
 	  .descr = "noremap keys in normal mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &nnoremap_cmd,    .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "nohlsearch",        .abbr = "noh",   .id = -1,
 	  .descr = "reset highlighting of search matches",
@@ -601,7 +601,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &nohlsearch_cmd,  .min_args = 0,   .max_args = 0, },
 	{ .name = "noremap",           .abbr = "no",    .id = COM_NOREMAP,
 	  .descr = "noremap keys in normal and visual modes",
-	  .flags = HAS_EMARK,
+	  .flags = HAS_EMARK | HAS_RAW_ARGS,
 	  .handler = &noremap_cmd,     .min_args = 2,   .max_args = NOT_DEF, },
 	{ .name = "normal",            .abbr = "norm",  .id = COM_NORMAL,
 	  .descr = "emulate keys typed in normal mode",
@@ -609,7 +609,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &normal_cmd,      .min_args = 1,   .max_args = NOT_DEF, },
 	{ .name = "nunmap",            .abbr = "nun",   .id = -1,
 	  .descr = "unmap keys in normal mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &nunmap_cmd,      .min_args = 1,   .max_args = 1, },
 	{ .name = "only",              .abbr = "on",    .id = -1,
 	  .descr = "switch to single-view mode",
@@ -633,11 +633,11 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &pwd_cmd,         .min_args = 0,   .max_args = 0, },
 	{ .name = "qmap",              .abbr = "qm",    .id = COM_QMAP,
 	  .descr = "map keys in preview mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &qmap_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "qnoremap",          .abbr = "qno",   .id = COM_QNOREMAP,
 	  .descr = "noremap keys in preview mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &qnoremap_cmd,    .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "quit",              .abbr = "q",     .id = -1,
 	  .descr = "exit the application",
@@ -645,7 +645,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &quit_cmd,        .min_args = 0,   .max_args = 0, },
 	{ .name = "qunmap",            .abbr = "qun",   .id = -1,
 	  .descr = "unmap keys in preview mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &qunmap_cmd,      .min_args = 1,   .max_args = 1, },
 	{ .name = "redraw",            .abbr = "redr",  .id = -1,
 	  .descr = "force screen redraw",
@@ -746,7 +746,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &unlet_cmd,       .min_args = 1,   .max_args = NOT_DEF, },
 	{ .name = "unmap",             .abbr = "unm",   .id = -1,
 	  .descr = "unmap keys in normal and visual modes",
-	  .flags = HAS_EMARK,
+	  .flags = HAS_EMARK | HAS_RAW_ARGS,
 	  .handler = &unmap_cmd,       .min_args = 1,   .max_args = 1, },
 	{ .name = "unselect",          .abbr = NULL,    .id = COM_SELECT,
 	  .descr = "unselect files matching pattern or range",
@@ -766,11 +766,11 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &vifm_cmd,        .min_args = 0,   .max_args = 0, },
 	{ .name = "vmap",              .abbr = "vm",    .id = COM_VMAP,
 	  .descr = "map keys in visual mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &vmap_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
 	{ .name = "vnoremap",          .abbr = "vn",    .id = COM_VNOREMAP,
 	  .descr = "noremap keys in visual mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &vnoremap_cmd,    .min_args = 0,   .max_args = NOT_DEF, },
 #ifdef _WIN32
 	{ .name = "volumes",           .abbr = NULL,    .id = -1,
@@ -784,7 +784,7 @@ const cmd_add_t cmds_list[] = {
 	  .handler = &vsplit_cmd,      .min_args = 0,   .max_args = 1, },
 	{ .name = "vunmap",            .abbr = "vu",    .id = -1,
 	  .descr = "unmap keys in visual mode",
-	  .flags = 0,
+	  .flags = HAS_RAW_ARGS,
 	  .handler = &vunmap_cmd,      .min_args = 1,   .max_args = 1, },
 	{ .name = "wincmd",            .abbr = "winc",  .id = COM_WINCMD,
 	  .descr = "cmdline Ctrl-W substitute",
