@@ -268,6 +268,9 @@
 	Fixed :noremap, which didn't accept ! and didn't reject less than two
 	arguments.
 
+	Fixed backslash in arguments for :*[un]map commands (required \ to be
+	written as \\).  Thanks to filterfalse.
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
